# whatscli-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Makefile  README.md  main.go  package.json  release.sh
.github/aur/: .gitignore
.github/scripts/: generate-aur-pkgbuilds.sh
.github/workflows/: release.yml
npm/: cli.js  install.js  install.test.js
src/: app.rs  cache.rs  config.rs  lib.rs  logging.rs  main.rs  media.rs  media_cache.rs  model.rs  qr.rs  session.rs  storage.rs
src/snapshots/: whatscli__app__tests__active_tasks.snap  whatscli__app__tests__chat_search.snap  whatscli__app__tests__command_palette.snap  whatscli__app__tests__conversation_empty.snap  whatscli__app__tests__help.snap  whatscli__app__tests__layout_medium.snap  whatscli__app__tests__layout_narrow.snap  whatscli__app__tests__layout_short.snap  whatscli__app__tests__layout_wide.snap  whatscli__app__tests__media_actions_compact.snap  whatscli__app__tests__media_actions_narrow.snap  whatscli__app__tests__media_actions_short.snap  whatscli__app__tests__media_actions_wide.snap  whatscli__app__tests__media_modal_compact.snap  whatscli__app__tests__media_modal_narrow.snap  whatscli__app__tests__media_modal_short.snap  whatscli__app__tests__media_modal_wide.snap  whatscli__app__tests__pairing.snap  whatscli__app__tests__theme_ansi16.snap  whatscli__app__tests__theme_truecolor.snap  whatscli__app__tests__toast_error.snap
src/ui/: editor.rs  mod.rs  theme.rs
