[package]
name = "whatscli"
version = "1.1.7"
edition = "2024"
rust-version = "1.89"
description = "A modern Rust port of WhatsCLI with a responsive terminal interface"
license = "MIT"
repository = "https://github.com/Pir0c0pter0/whatscli-rs"

[dependencies]
anyhow = "1.0"
arboard = "3.6"
async-channel = "2.5"
chrono = { version = "0.4", features = ["clock"] }
crossterm = { version = "0.28", features = ["event-stream"] }
diesel = { version = "2.3.11", default-features = false, features = ["sqlite"] }
dirs = "6.0"
futures-util = "0.3"
filetime = "0.2"
mime_guess = "2.0"
notify-rust = "4.11"
open = "5.3"
prost = "0.14.3"
qrcode = { version = "0.14", default-features = false }
ratatui = "0.29"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
ratatui-image = { version = "3.0.0", default-features = false, features = ["crossterm"] }
regex = "1.11"
rodio = { version = "0.21", default-features = false, features = ["playback"] }
rust-ini = "0.21"
shell-words = "1.1"
log = "0.4"
tokio = { version = "1.47", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
textwrap = "0.16"
unicode-segmentation = "1.12"
unicode-width = "0.2"
ureq = { version = "3.3", default-features = false, features = ["rustls"] }
whatsapp-rust = { version = "=0.6.0", default-features = false, features = ["sqlite-storage", "tokio-transport", "tokio-runtime", "ureq-client", "tokio-native"] }

[dev-dependencies]
insta = "1.43"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
